Change the way sidebar face is rendered
- Move all face logic for sidebar from "img" widget to the new "faceimg" (eyes, sclera, lashes, brows, mouth, blush and tears)
- Split eye image into separate eye base, eyelid, sclera and iris images
- Implement eye blinking animation with CSS
- Make eyes half-closed when highly aroused
- Add an option to disable blinking in settings
- Add an option to draw eyebrows below hair layer
- Add support for different face graphic styles, which can be switched in settings
- Implement new face style "small-eyes"

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -717,6 +717,10 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #FEF593
 }
 
+.ashy {
+	color: #d3cfaa
+}
+
 .strawberry {
 	color: #F08C51
 }
@@ -763,6 +767,10 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	opacity: 0.75;
 		filter: brightness(0.90);
 
+}
+
+.grey-shadow {
+	filter: drop-shadow(1px 1px 0px #666);
 }
 
 #stats {
@@ -1090,6 +1098,9 @@ removed unused:
 .layer-base {
 	z-index: 20;
 }
+.layer-facebase {
+	z-index: 21;
+}
 .layer-tanBody {
 	z-index: 22;
 }
@@ -1100,7 +1111,16 @@ removed unused:
 	z-index: 30;
 }
 .layer-sclera {
-	z-index: 35;
+	z-index: 31;
+}
+.layer-iris {
+	z-index: 32;
+}
+.layer-eyelids {
+	z-index: 33;
+}
+.layer-lashes {
+	z-index: 34;
 }
 .layer-mouth {
 	z-index: 40;
@@ -1113,6 +1133,9 @@ removed unused:
 }
 .layer-blush {
 	z-index: 50;
+}
+.layer-freckles {
+	z-index: 51;
 }
 .layer-skin {
 	z-index: 52;
@@ -1127,9 +1150,6 @@ removed unused:
 	z-index: 62;
 }
 .layer-penis-chastity {
-	z-index: 64;
-}
-.layer-lashes {
 	z-index: 64;
 }
 .layer-legs {
@@ -1347,6 +1367,9 @@ removed unused:
 .layer-sexbaseoverlay {
 	z-index: 13;
 }
+.layer-sexfreckles {
+	z-index: 19;
+}
 .layer-sexeyes {
 	z-index: 20;
 }
@@ -1464,6 +1487,15 @@ removed unused:
 }
 .layer-frontforeground {
 	z-index: 220;
+}
+
+.freckles {
+	mix-blend-mode: darken;
+	opacity: 0.75;
+}
+
+.shift-right-2 {
+	transform: translateX(2px);
 }
 
 /*! <<numberpool>> macro set for SugarCube v2 */
@@ -1730,85 +1762,215 @@ label {
  * - inner image element has .colour-hair (or -eye/-lower/-upper/-under) class
  */
 /* Hair: base is red */
-.hair-black .colour-hair {
+.brows-black,
+.hair-black .colour-hair,
+.pbhair-black {
 	-webkit-filter: hue-rotate(0deg) saturate(15%) brightness(50%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(15%) brightness(50%) contrast(100%);
 }
-.hair-platinumblond .colour-hair {
+.brows-platinum-blond,
+.brows-platinumblond,
+.hair-platinum-blond .colour-hair,
+.pbhair-platinum-blond,
+.hair-platinumblond .colour-hair,
+.pbhair-platinumblond {
 	-webkit-filter: hue-rotate(57deg) saturate(60%) brightness(170%) contrast(80%) sepia(0);
 	filter: hue-rotate(57deg) saturate(60%) brightness(170%) contrast(80%) sepia(0);
 }
-.hair-blond .colour-hair {
+.brows-ashy-blond,
+.brows-ashyblond,
+.hair-ashy-blond .colour-hair,
+.pbhair-ashy-blond,
+.hair-ashyblond .colour-hair,
+.pbhair-ashyblond {
+	-webkit-filter: hue-rotate(50deg) saturate(30%) brightness(140%) contrast(80%);
+	filter: hue-rotate(50deg) saturate(30%) brightness(140%) contrast(80%);
+}
+.brows-blond,
+.hair-blond .colour-hair,
+.pbhair-blond {
 	-webkit-filter: hue-rotate(60deg) saturate(80%) brightness(135%) contrast(90%);
 	filter: hue-rotate(60deg) saturate(80%) brightness(135%) contrast(90%);
 }
-.hair-blue .colour-hair {
+.brows-blue,
+.hair-blue .colour-hair,
+.pbhair-blue {
 	-webkit-filter: hue-rotate(200deg) saturate(200%) brightness(58%) contrast(150%);
 	filter: hue-rotate(200deg) saturate(200%) brightness(58%) contrast(150%);
 }
-.hair-brown .colour-hair {
+.hair-neon-blue .colour-hair,
+.pbhair-neon-blue,
+.hair-neonblue .colour-hair,
+.pbhair-neonblue {
+	-webkit-filter: hue-rotate(200deg) saturate(220%) brightness(130%) contrast(100%);
+	filter: hue-rotate(200deg) saturate(220%) brightness(130%) contrast(100%);
+}
+.brows-neon-blue,
+.brows-neonblue {
+	-webkit-filter: hue-rotate(200deg) saturate(220%) brightness(300%) contrast(100%);
+	filter: hue-rotate(200deg) saturate(220%) brightness(300%) contrast(100%);
+}
+.brows-brown,
+.hair-brown .colour-hair,
+.pbhair-brown {
 	-webkit-filter: hue-rotate(40deg) saturate(60%) brightness(71%) contrast(100%);
 	filter: hue-rotate(40deg) saturate(60%) brightness(71%) contrast(100%);
 }
-.hair-lightbrown .colour-hair {
+.brows-light-brown,
+.brows-lightbrown,
+.hair-light-brown .colour-hair,
+.pbhair-light-brown,
+.hair-lightbrown .colour-hair,
+.pbhair-lightbrown {
 	-webkit-filter: hue-rotate(40deg) saturate(70%) brightness(100%) contrast(110%);
 	filter: hue-rotate(40deg) saturate(70%) brightness(100%) contrast(110%);
 }
-.hair-darkbrown .colour-hair {
+.brows-dark-brown,
+.brows-darkbrown,
+.hair-dark-brown .colour-hair,
+.pbhair-dark-brown,
+.hair-darkbrown .colour-hair,
+.pbhair-darkbrown {
 	-webkit-filter: hue-rotate(30deg) saturate(70%) brightness(50%) contrast(110%);
 	filter: hue-rotate(30deg) saturate(70%) brightness(50%) contrast(110%);
 }
-.hair-strawberryblond .colour-hair {
+.brows-strawberry-blond,
+.brows-strawberryblond,
+.hair-strawberry-blond .colour-hair,
+.pbhair-strawberry-blond,
+.hair-strawberryblond .colour-hair,
+.pbhair-strawberryblond {
 	-webkit-filter: hue-rotate(30deg) saturate(80%) brightness(150%) contrast(90%);
 	filter: hue-rotate(30deg) saturate(80%) brightness(150%) contrast(90%) sepia(1%);
 }
-.hair-ginger .colour-hair {
+.hair-ginger .colour-hair,
+.pbhair-ginger {
 	-webkit-filter: hue-rotate(30deg) saturate(150%) brightness(110%) contrast(90%);
 	filter: hue-rotate(30deg) saturate(150%) brightness(110%) contrast(90%);
 }
-.hair-green .colour-hair {
+.brows-ginger {
+	-webkit-filter: hue-rotate(30deg) brightness(430%) saturate(60%) contrast(120%);
+	filter: hue-rotate(30deg) brightness(430%) saturate(60%) contrast(120%);
+}
+.brows-blood-orange,
+.brows-bloodorange,
+.hair-blood-orange .colour-hair,
+.pbhair-blood-orange,
+.hair-bloodorange .colour-hair,
+.pbhair-bloodorange {
+	-webkit-filter: hue-rotate(14deg) saturate(150%) brightness(100%) contrast(120%);
+	filter: hue-rotate(14deg) saturate(150%) brightness(100%) contrast(120%);
+}
+.brows-green,
+.hair-green .colour-hair,
+.pbhair-green {
 	-webkit-filter: hue-rotate(125) saturate(100%) brightness(80%) contrast(100%);
 	filter: hue-rotate(125deg) saturate(100%) brightness(80%) contrast(100%);
 }
-.hair-teal .colour-hair {
+.hair-toxic-green .colour-hair,
+.pbhair-toxic-green,
+.hair-toxicgreen .colour-hair,
+.pbhair-toxicgreen {
+	-webkit-filter: hue-rotate(80deg) saturate(220%) brightness(130%) contrast(100%);
+	filter: hue-rotate(80deg) saturate(220%) brightness(130%) contrast(100%);
+}
+.brows-toxic-green,
+.brows-toxicgreen {
+	-webkit-filter: hue-rotate(80deg) saturate(220%) brightness(330%) contrast(100%);
+	filter: hue-rotate(80deg) saturate(220%) brightness(330%) contrast(100%);
+}
+.hair-teal .colour-hair,
+.pbhair-teal {
 	-webkit-filter: hue-rotate(155deg) saturate(100%) brightness(88%) contrast(100%);
 	filter: hue-rotate(155deg) saturate(100%) brightness(88%) contrast(100%);
 }
-.hair-pink .colour-hair {
+.brows-teal {
+	-webkit-filter: hue-rotate(155deg) saturate(100%) brightness(168%) contrast(100%);
+	filter: hue-rotate(155deg) saturate(100%) brightness(168%) contrast(100%);
+}
+.brows-pink,
+.hair-pink .colour-hair,
+.pbhair-pink {
 	-webkit-filter: hue-rotate(-20deg) saturate(70%) brightness(100%) contrast(100%);
 	filter: hue-rotate(-20deg) saturate(70%) brightness(100%) contrast(100%);
 }
-.hair-hotpink .colour-hair {
+.brows-hot-pink,
+.brows-hotpink,
+.hair-hot-pink .colour-hair,
+.pbhair-hot-pink,
+.hair-hotpink .colour-hair,
+.pbhair-hotpink {
 	-webkit-filter: hue-rotate(320deg) saturate(100%) brightness(120%) contrast(100%);
 	filter: hue-rotate(320deg) saturate(100%) brightness(120%) contrast(100%);
 }
-.hair-softpink .colour-hair {
+.brows-soft-pink,
+.brows-softpink,
+.hair-soft-pink .colour-hair,
+.pbhair-soft-pink,
+.hair-softpink .colour-hair,
+.pbhair-softpink {
 	-webkit-filter: hue-rotate(-20deg) saturate(30%) brightness(150%) contrast(100%);
 	filter: hue-rotate(20deg) saturate(30%) brightness(150%) contrast(100%);
 }
-.hair-purple .colour-hair {
+.brows-purple,
+.hair-purple .colour-hair,
+.pbhair-purple {
 	-webkit-filter: hue-rotate(-70deg) saturate(110%) brightness(50%) contrast(200%);
 	filter: hue-rotate(-70deg) saturate(110%) brightness(50%) contrast(200%);
 }
-.hair-red .colour-hair {
+.brows-bright-purple,
+.brows-brightpurple,
+.hair-bright-purple .colour-hair,
+.pbhair-bright-purple,
+.hair-brightpurple .colour-hair,
+.pbhair-brightpurple {
+	-webkit-filter: hue-rotate(259deg) saturate(220%) brightness(130%) contrast(100%);
+	filter: hue-rotate(259deg) saturate(220%) brightness(130%) contrast(100%);
+}
+.brows-red,
+.hair-red .colour-hair,
+.pbhair-red {
 	-webkit-filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 }
-.hair-crimson .colour-hair {
+.brows-crimson,
+.hair-crimson .colour-hair,
+.pbhair-crimson {
 	-webkit-filter: hue-rotate(0deg) saturate(155%) brightness(65%) contrast(135%);
 	filter: hue-rotate(0deg) saturate(155%) brightness(65%) contrast(135%);
 }
-.hair-white .colour-hair {
+.hair-white .colour-hair,
+.pbhair-white {
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(160%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(160%) contrast(100%);
 }
-.hair-snowwhite .colour-hair {
+.brows-white {
+	-webkit-filter: hue-rotate(250deg) saturate(0%) brightness(620%) contrast(100%);
+	filter: hue-rotate(250deg) saturate(0%) brightness(620%) contrast(100%);
+}
+.hair-snow-white .colour-hair,
+.pbhair-snow-white,
+.hair-snowwhite .colour-hair,
+.pbhair-snowwhite {
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(190%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(190%) contrast(100%);
 }
-.hair-deepblue .colour-hair {
-	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(190%) contrast(100%);
+.brows-snow-white,
+.brows-snowwhite {
+	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(690%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(690%) contrast(100%);
+}
+.hair-deep-blue .colour-hair,
+.pbhair-deep-blue,
+.hair-deepblue .colour-hair,
+.pbhair-deepblue {
+	-webkit-filter: hue-rotate(240deg) saturate(100%) brightness(40%) contrast(120%);
 	filter: hue-rotate(240deg) saturate(100%) brightness(40%) contrast(120%);
+}
+.brows-deep-blue,
+.brows-deepblue {
+	-webkit-filter: hue-rotate(240deg) saturate(100%) brightness(120%) contrast(120%);
+	filter: hue-rotate(240deg) saturate(100%) brightness(120%) contrast(120%);
 }
 
 /* Eye: base is hazel */
@@ -1836,7 +1998,8 @@ label {
 	-webkit-filter: hue-rotate(30deg) brightness(140%) saturate(100%) contrast(100%);
 	filter: hue-rotate(30deg) brightness(140%) saturate(100%) contrast(100%);
 }
-.eye-lightgreen .colour-eye {
+.eye-lightgreen .colour-eye,
+.eye-light-green .colour-eye {
 	-webkit-filter: hue-rotate(30deg) brightness(170%) saturate(160%) contrast(100%);
 	filter: hue-rotate(30deg) brightness(170%) saturate(160%) contrast(100%);
 }
@@ -2185,6 +2348,115 @@ label {
 	-webkit-filter: hue-rotate(351deg) saturate(28%) brightness(90%) opacity(0.5);
 	filter: hue-rotate(351deg) saturate(28%) brightness(90%) opacity(0.5);
 }
+
+/* Makeup colours */
+.lipstick-red {
+	-webkit-filter: hue-rotate(0deg);
+	filter: hue-rotate(0deg);
+}
+.lipstick-blue {
+	-webkit-filter: hue-rotate(240deg);
+	filter: hue-rotate(240deg);
+}
+.lipstick-green {
+	-webkit-filter: hue-rotate(140deg);
+	filter: hue-rotate(140deg);
+}
+.lipstick-purple {
+	-webkit-filter: hue-rotate(270deg);
+	filter: hue-rotate(270deg);
+}
+.lipstick-orange {
+	-webkit-filter: hue-rotate(60deg) brightness(2.5);
+	filter: hue-rotate(60deg) brightness(2.5);
+}
+.lipstick-lime {
+	-webkit-filter: hue-rotate(75deg) saturate(1.5) brightness(2.5);
+	filter: hue-rotate(75deg) saturate(1.5) brightness(2.5);
+}
+.lipstick-pink {
+	-webkit-filter: hue-rotate(270deg) brightness(2.5);
+	filter: hue-rotate(270deg) brightness(2.5);
+}
+.lipstick-light-pink {
+	-webkit-filter: hue-rotate(270deg) brightness(7.5);
+	filter: hue-rotate(270deg) brightness(7.5);
+}
+.lipstick-dark-red {
+	-webkit-filter: hue-rotate(0deg) brightness(0.8);
+	filter: hue-rotate(0deg) brightness(0.8);
+}
+.lipstick-black {
+	-webkit-filter: hue-rotate(0deg) brightness(0) contrast(0.8);
+	filter: hue-rotate(0deg) brightness(0) contrast(0.8);
+}
+
+.eyeshadow-red {
+	-webkit-filter: hue-rotate(0deg) brightness(2) contrast(0.6);
+	filter: hue-rotate(0deg) brightness(2) contrast(0.6);
+}
+.eyeshadow-pink {
+	-webkit-filter: hue-rotate(-40deg) brightness(3) contrast(0.5);
+	filter: hue-rotate(-40deg) brightness(3) contrast(0.5);
+}
+.eyeshadow-light-pink {
+	-webkit-filter: hue-rotate(280deg) brightness(15);
+	filter: hue-rotate(280deg) brightness(15);
+}
+.eyeshadow-green {
+	-webkit-filter: hue-rotate(90deg) brightness(2) contrast(0.5);
+	filter: hue-rotate(90deg) brightness(2) contrast(0.5);
+}
+.eyeshadow-light-green {
+	-webkit-filter: hue-rotate(150deg) brightness(4) saturate(0.8) contrast(0.5);
+	filter: hue-rotate(150deg) brightness(4) saturate(0.8) contrast(0.5);
+}
+.eyeshadow-blue {
+	-webkit-filter: hue-rotate(245deg) brightness(2) contrast(0.7);
+	filter: hue-rotate(245deg) brightness(2) contrast(0.7);
+}
+.eyeshadow-light-blue {
+	-webkit-filter: hue-rotate(245deg) brightness(4) saturate(0.8) contrast(0.5);
+	filter: hue-rotate(245deg) brightness(4) saturate(0.8) contrast(0.5);
+}
+.eyeshadow-purple {
+	-webkit-filter: hue-rotate(262deg) brightness(2) contrast(0.6);
+	filter: hue-rotate(262deg) brightness(2) contrast(0.6);
+}
+.eyeshadow-orange {
+	-webkit-filter: hue-rotate(45deg) brightness(2.2) saturate(0.8);
+	filter: hue-rotate(45deg) brightness(2.2) saturate(0.8);
+}
+.eyeshadow-yellow {
+	-webkit-filter: hue-rotate(69deg) brightness(4) saturate(1) contrast(0.7);
+	filter: hue-rotate(69deg) brightness(4) saturate(1) contrast(0.7);
+}
+.eyeshadow-brown {
+	-webkit-filter: hue-rotate(45deg) brightness(1) saturate(1) contrast(0.6);
+	filter: hue-rotate(45deg) brightness(1) saturate(1) contrast(0.6);
+}
+.eyeshadow-light-brown {
+	-webkit-filter: hue-rotate(40deg) brightness(4) saturate(0.7) contrast(0.5);
+	filter: hue-rotate(40deg) brightness(4) saturate(0.7) contrast(0.5);
+}
+.eyeshadow-dark-brown {
+	-webkit-filter: hue-rotate(40deg) brightness(0.5) saturate(0.8) contrast(0.6);
+	filter: hue-rotate(40deg) brightness(0.5) saturate(0.8) contrast(0.6);
+}
+.eyeshadow-black,
+.mascara-black {
+	-webkit-filter: hue-rotate(0deg) brightness(0.1) saturate(0) contrast(0.7);
+	filter: hue-rotate(0deg) brightness(0.1) saturate(0) contrast(0.7);
+}
+.eyeshadow-white {
+	-webkit-filter: hue-rotate(250deg) brightness(8) saturate(0) contrast(1);
+	filter: hue-rotate(250deg) brightness(8) saturate(0) contrast(1);
+}
+.eyeshadow-silver {
+	-webkit-filter: hue-rotate(0deg) saturate(0) brightness(2.4);
+	filter: hue-rotate(0deg) saturate(0) brightness(2.4);
+}
+
 
 /*
  * Animation-related classes. Work-in-progress
@@ -2650,6 +2922,37 @@ label {
 	height: 128px;
 }
 
+.capitalize,
+.capitalize * {
+    text-transform: capitalize;
+}
+
+.colour-sample {
+    display: inline-block;
+	width: 0.8em;
+    height: 0.8em;
+    background: #F00;
+    border-radius: 1em;
+}
+
+.bgcolour-eyes {
+	background: #6E4E11;
+}
+.bgcolour-hair {
+	background: #FD6064;
+}
+.bgcolour-red {
+	background: #F00;
+}
+
+.link-disabled {
+	pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+	color: dimgrey;
+	filter: saturate(0);
+}
+
 /* duration related-classes.
 	When adding, don't forget to add it to rule above with animation-iteration-count */
 .anim-1s {
@@ -2679,22 +2982,6 @@ label {
 	100% {
 		-webkit-transform: translateX(-100%);
 		transform: translateX(-100%);
-	}
-}
-
-/* Rainbow colours when on drugs */
-.acid-trip {
-	animation: hue-rotate 2s linear infinite;
-}
-
-@keyframes anim-hue-rotate {
-	from {
-		-webkit-filter: hue-rotate(0);
-		filter: hue-rotate(0);
-	}
-	to {
-		-webkit-filter: hue-rotate(360deg);
-		filter: hue-rotate(360deg);
 	}
 }
 
@@ -3103,4 +3390,40 @@ label {
 
 #global-recognition .social-box:not(:last-child) .social-description {
 	align-self: flex-start;
+}
+
+/* Eye blinking animation, 100 seconds loop to make 1% equal to 1s; eyes are closed for 0.05s */
+.eyes-blink {
+	-webkit-animation: anim-eyes-blink 180s infinite steps(1);
+	animation: anim-eyes-blink 180s infinite steps(1);
+}
+.eyes-blink-trauma {
+	-webkit-animation: anim-eyes-blink-trauma 180s infinite steps(1);
+	animation: anim-eyes-blink-trauma 180s infinite steps(1);
+}
+.eyes-closed {
+	-webkit-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+
+@keyframes anim-eyes-blink {
+	0%, 5.05%, 13.1%, 16.15%, 16.8%, 23.8%, 36.85%, 41.9%, 42.95%, 47%, 53.05%, 57.1%, 61.15%, 66.2%, 73.25%, 79.3%, 82.35%, 83.4%, 83.95%, 89%, 93.05%, 99.1%, 100% {
+		-webkit-transform: translateX(0);
+		transform: translateX(0);
+	}
+	5%, 13.05%, 16.1%, 16.75%, 23.75%, 36.8%, 41.85%, 42.9%, 46.95%, 53%, 57.05%, 61.1%, 66.15%, 73.2%, 79.25%, 82.3%, 83.35%, 83.9%, 88.95%, 93%, 99.05% {
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+}
+
+@keyframes anim-eyes-blink-trauma {
+	0%, 13.1%, 23.2%, 38.3%, 51.4%, 69.5%, 77.6%, 90.7%, 100% {
+		-webkit-transform: translateX(0);
+		transform: translateX(0);
+	}
+	13%, 23.1%, 38.2%, 51.3%, 69.4%, 77.5%, 90.6%, 99.9% {
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
 }
