Added missing chastity checks to `$gender_known` pushes
- Includes minor text fix for the feat menu

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -693,44 +693,56 @@ body.has-images #story-caption .storyCaptionDivExtended {
 }
 
 .orange {
-	color: #f28500
+	color: #f28500;
 }
 
 .tangerine,
 .pale-tangerine {
-	color: #f28500
+	color: #f28500;
 }
 
 .black {
-	color: #929292
+	color: #929292;
 }
 
 .brown {
-	color: #aa7243
+	color: #aa7243;
+}
+
+.softbrown {
+	color: #a45e16;
 }
 
 .lightbrown {
-	color: #C5793A
+	color: #C5793A;
+}
+
+.burntorange {
+	color: #d47730;
+}
+
+.softblond {
+	color: #e4cd87;
 }
 
 .platinum {
-	color: #FEF593
+	color: #FEF593;
 }
 
 .ashy {
-	color: #d3cfaa
+	color: #d3cfaa;
 }
 
 .strawberry {
-	color: #F08C51
+	color: #F08C51;
 }
 
 .lewd {
-	color: #E04880
+	color: #E04880;
 }
 
 .grey {
-	color: #B7B7B7
+	color: #B7B7B7;
 }
 
 .tan {
@@ -846,6 +858,20 @@ body.has-images #story-caption .storyCaptionDivExtended {
 
 #ui-bar-toggle {
 	background-color: #222;
+}
+
+#versioninfo, #story-title {
+	position:relative;
+	z-index: 2;
+}
+
+#startingPlayerImage {
+	margin-top:130px;
+}
+
+#startingPlayerImage #img{
+	top: 100px;
+	left: 20px;
 }
 
 .icon_ui {
@@ -1860,6 +1886,75 @@ label {
 .pbhair-bloodorange {
 	-webkit-filter: hue-rotate(14deg) saturate(150%) brightness(100%) contrast(120%);
 	filter: hue-rotate(14deg) saturate(150%) brightness(100%) contrast(120%);
+}
+.brows-burnt-orange,
+.brows-burntorange,
+.hair-burnt-orange .colour-hair,
+.pbhair-burnt-orange,
+.hair-burntorange .colour-hair,
+.pbhair-burntorange {
+	-webkit-filter: hue-rotate(34deg) contrast(57%) saturate(154%) brightness(104%);
+	filter: hue-rotate(34deg) contrast(57%) saturate(154%) brightness(104%);
+}
+.brows-jet-black,
+.brows-jetblack,
+.hair-jet-black .colour-hair,
+.pbhair-jet-black,
+.hair-jetblack .colour-hair,
+.pbhair-jetblack {
+	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(40%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(40%) contrast(100%);
+}
+.brows-soft-blond,
+.brows-softblond,
+.hair-soft-blond .colour-hair,
+.pbhair-soft-blond,
+.hair-softblond .colour-hair,
+.pbhair-softblond {
+	-webkit-filter: hue-rotate(57deg) saturate(250%) brightness(180%) contrast(60%) sepia(0.75);
+	filter: hue-rotate(57deg) saturate(250%) brightness(180%) contrast(60%) sepia(0.75);
+}
+.brows-golden,
+.hair-golden .colour-hair,
+.pbhair-golden {
+	-webkit-filter: hue-rotate(60deg) saturate(130%) brightness(135%) contrast(100%);
+	filter: hue-rotate(60deg) saturate(130%) brightness(135%) contrast(100%);
+}
+.brows-soft-brown,
+.brows-softbrown,
+.hair-soft-brown .colour-hair,
+.pbhair-soft-brown,
+.hair-softbrown .colour-hair,
+.pbhair-softbrown {
+	-webkit-filter: hue-rotate(40deg) saturate(100%) brightness(80%) contrast(100%);
+	filter: hue-rotate(40deg) saturate(100%) brightness(80%) contrast(100%);
+}
+.brows-dark-lime,
+.brows-darklime,
+.hair-dark-lime .colour-hair,
+.pbhair-dark-lime,
+.hair-darklime .colour-hair,
+.pbhair-darklime {
+	-webkit-filter: hue-rotate(90deg) saturate(100%) brightness(100%) contrast(100%);
+	filter: hue-rotate(90deg) saturate(100%) brightness(100%) contrast(100%);
+}
+.brows-bright-pink,
+.brows-brightpink,
+.hair-bright-pink .colour-hair,
+.pbhair-bright-pink,
+.hair-brightpink .colour-hair,
+.pbhair-brightpink {
+	-webkit-filter: hue-rotate(-20deg) saturate(70%) brightness(130%) contrast(100%);
+	filter: hue-rotate(-20deg) saturate(70%) brightness(130%) contrast(100%);
+}
+.brows-medium-purple,
+.brows-mediumpurple,
+.hair-medium-purple .colour-hair,
+.pbhair-medium-purple,
+.hair-mediumpurple .colour-hair,
+.pbhair-mediumpurple {
+	-webkit-filter: hue-rotate(-80deg) saturate(110%) brightness(60%) contrast(200%);
+	filter: hue-rotate(-80deg) saturate(110%) brightness(60%) contrast(200%);
 }
 .brows-green,
 .hair-green .colour-hair,
