Implement choking and asphyxia setting

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1638,6 +1638,15 @@ div[id|="numberslider-body"] input::-ms-thumb {
 	width: 33px;
 }
 
+.small-description {
+	font-size: small;
+	color: darkgrey;
+}
+.x-small-description {
+	font-size: x-small;
+	color: grey;
+}
+
 label {
 	cursor: pointer;
 }
