Display NPC actions during combat blackout
- NPC actions appear one by one and have special FX on them
- reduce blackout time from 6 turns to 3 turns
- move code for advancing 10 seconds during combat to its own widget <<pass10sec>>
- add new debug link to help testing combat suffocation

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -3531,3 +3531,46 @@ label {
 		transform: translateX(-50%);
 	}
 }
+
+.unconscious {
+	opacity: 0.6;
+	font-size: 0.9em;
+	-webkit-animation: anim-unconscious-fade-in 2s ease-out, 
+					   anim-unconscious-blur 10s infinite;
+	animation: anim-unconscious-fade-in 2s ease-out, 
+			   anim-unconscious-blur 10s infinite;
+}
+
+.fade-in {
+    -webkit-animation: anim-fade-in 2s ease-out;
+    animation: anim-fade-in 2s ease-out;
+}
+
+@keyframes anim-unconscious-blur {
+	0%, 100% {
+		-webkit-filter: blur(0);
+		filter: blur(0);
+	}
+	50% {
+		-webkit-filter: blur(1px);
+		filter: blur(1px);
+	}
+}
+
+@keyframes anim-unconscious-fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0.6;
+	}
+}
+
+@keyframes anim-fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
