Improve General section of settings
- move eye blinking, half-closed eyes and face style settings from Game settings to General settings > Images
- make face style setting available only in debug
- replace radio buttons with checkboxes for enable/disable or on/off style settings
- place descriptions for settings below the checkboxes

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -394,6 +394,18 @@ mouse.tooltip:hover span {
 	border: 1px solid #666;
 }
 
+.settingsToggleBig {
+	float: left;
+	width: 100%;
+	min-width: 275px;
+	padding: 3px;
+	margin: 10px 0px;
+}
+
+.v-spacer {
+    margin: 1em 0;
+}
+
 #divbowl {
 		position: relative;
 		display: inline-block;
@@ -1638,6 +1650,10 @@ div[id|="numberslider-body"] input::-ms-thumb {
 	width: 33px;
 }
 
+.description {
+    font-size: 0.9em;
+    color: darkgrey;
+}
 .small-description {
 	font-size: small;
 	color: darkgrey;
