Removed instances of the optional chaining JS operator to improve compatability on older browsers.
Tweaked behavior of secondary npc boxes on social overlay to only expand box width when displayed on narrow screen.

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -3444,12 +3444,6 @@ label {
 	max-width: 32.4%;
 }
 
-@media(max-width: 869px) {
-	#npc-relations .social-box {
-		max-width: 100%;
-	}
-}
-
 #secondary-npcs,
 #farm-status {
 	font-size: 85%;
@@ -3459,7 +3453,7 @@ label {
 #farm-status .social-box {
 	min-width: 220px;
 	border-color: #888;
-	flex: 1 1 24.3%
+	flex: 0 1 24.3%
 }
 
 #secondary-npcs .social-box .social-top-line
@@ -3510,6 +3504,17 @@ label {
 
 #global-recognition .social-box:not(:last-child) .social-description {
 	align-self: flex-start;
+}
+
+@media(max-width: 869px) {
+	#npc-relations .social-box {
+		max-width: 100%;
+	}
+
+	#secondary-npcs .social-box,
+	#farm-status .social-box {
+		flex: 1 1 24.3%
+	}
 }
 
 /* Eye blinking animation, 100 seconds loop to make 1% equal to 1s; eyes are closed for 0.05s */
