--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -3557,9 +3557,9 @@ label {
 	opacity: 0.6;
 	font-size: 0.9em;
 	-webkit-animation: anim-unconscious-fade-in 2s ease-out, 
-					   anim-unconscious-blur 10s infinite;
+					   anim-unconscious-blur infinite;
 	animation: anim-unconscious-fade-in 2s ease-out, 
-			   anim-unconscious-blur 10s infinite;
+			   anim-unconscious-blur infinite;
 }
 
 .fade-in {
