Replaced all instances of the word "social" in the html and css for the updated social ui. (Fixes adblockers removing content)

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -3112,7 +3112,7 @@ label {
 }
 
 .characteristic-box-list,
-.social-box-list {
+.relation-box-list {
 	display: flex;
 	flex-wrap: wrap;
 	position: relative;
@@ -3148,7 +3148,7 @@ label {
 }
 
 .characteristic-box-list .characteristic-title,
-.social-box .social-top-line .social-name {
+.relation-box .relation-top-line .relation-name {
     flex: 1;
     align-self: flex-end;
     text-align: left;
@@ -3156,7 +3156,7 @@ label {
 }
 
 .characteristic-box-list .characteristic-top-line .characteristic-level .grade-percent,
-.social-box .social-top-line .social-title {
+.relation-box .relation-top-line .relation-title {
 	display: inline-block; 
 	min-width:37px
 }
@@ -3178,7 +3178,7 @@ label {
 }
 
 #characteristics-display h4,
-#social-display h4 {
+#relation-display h4 {
 	margin-top: 2rem;
 	margin-bottom: 0;
 	font-weight: normal;
@@ -3307,7 +3307,7 @@ label {
 	}
 }
 
-.social-box-list .social-box {
+.relation-box-list .relation-box {
 	position: relative;
     display: inline-flex;
     flex-direction: column;
@@ -3321,7 +3321,7 @@ label {
     flex: 1 1 32.4%;
 }
 
-.social-box .social-top-line {
+.relation-box .relation-top-line {
 	display: flex;
 	align-items: space-between;
     font-size: 1.1em;
@@ -3330,28 +3330,28 @@ label {
     align-self: stretch;
 }
 
-.social-box .social-top-line .social-title {
+.relation-box .relation-top-line .relation-title {
 	margin-right: 5px;
 	text-transform: capitalize;
 }
 
-.social-box .social-top-line .love-interest-icon {
+.relation-box .relation-top-line .love-interest-icon {
 	width: 24px;
 	height: 24px;
 }
 
-.social-box .social-description {
+.relation-box .relation-description {
 	padding: 0.5em;
 	font-size: 90%;
 }
 
-.social-box .social-description .meter {
+.relation-box .relation-description .meter {
 	position: absolute;
     bottom: 0;
     left: 0;
 }
 
-.social-box .relation-stat-list {
+.relation-box .relation-stat-list {
 	display: flex;
     flex-wrap: wrap;
     background-image: linear-gradient(transparent 50%, #444 0.1em, transparent calc(50% + .1em)), linear-gradient(90deg, transparent 50%, #444 .1em, transparent calc(50% + .1em));
@@ -3363,11 +3363,11 @@ label {
     min-height: 130px;
 }
 
-.social-box .relation-stat-list.no-images {
+.relation-box .relation-stat-list.no-images {
 	min-height: 80px;
 }
 
-.social-box .relation-stat-list .relation-stat-block {
+.relation-box .relation-stat-list .relation-stat-block {
 	position: relative;
 	display: flex;
     flex-direction: column;
@@ -3378,19 +3378,19 @@ label {
     margin: 0;
 }
 
-.social-box .relation-stat-list.no-images .relation-stat-block {
+.relation-box .relation-stat-list.no-images .relation-stat-block {
 	flex-direction: row;
 	justify-content: center;
 }
 
-.social-box .relation-stat {
+.relation-box .relation-stat {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	z-index: 0;
 }
 
-.social-box .relation-stat-icon {
+.relation-box .relation-stat-icon {
 	position: relative;
 	display: inline-block;
 	width: 32px;
@@ -3398,29 +3398,29 @@ label {
 	margin-right: 5px;
 }
 
-.social-box .relation-stat-icon .active-icon-img {
+.relation-box .relation-stat-icon .active-icon-img {
 	position: relative;
 	z-index: 1;
     clip-path: inset(0 calc( 100% - var(--progress)) 0 0);
 }
 
-.social-box .relation-stat-icon.vertical .active-icon-img {
+.relation-box .relation-stat-icon.vertical .active-icon-img {
 	clip-path: inset(calc( 100% - var(--progress)) 0 0 0);
 }
 
-.social-box .relation-stat-icon.vertical-inverted .active-icon-img {
+.relation-box .relation-stat-icon.vertical-inverted .active-icon-img {
 	clip-path: inset(0 0 calc( 100% - var(--progress)) 0);
 }
 
-.social-box .relation-stat-icon.horizontal-inverted .active-icon-img {
+.relation-box .relation-stat-icon.horizontal-inverted .active-icon-img {
 	clip-path: inset(0 0 0 calc( 100% - var(--progress)));
 }
 
-.social-box .relation-stat-icon img.inactive-icon-img.outlined {
+.relation-box .relation-stat-icon img.inactive-icon-img.outlined {
 	filter: contrast(0.35) brightness(0.25) saturate(0) drop-shadow(0px 0px 0px white);
 }
 
-.social-box .relation-stat-icon img {
+.relation-box .relation-stat-icon img {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -3430,17 +3430,17 @@ label {
 	right: 0;
 }
 
-.social-box .relation-stat .relation-stat-percent {
+.relation-box .relation-stat .relation-stat-percent {
 	text-align: left;
 }
 
-.social-box .relation-stat-block .progress-bar {
+.relation-box .relation-stat-block .progress-bar {
 	width: var(--progress);
 	top: auto;
 	bottom: 0;
 }
 
-#npc-relations .social-box {
+#npc-relations .relation-box {
 	max-width: 32.4%;
 }
 
@@ -3449,70 +3449,70 @@ label {
 	font-size: 85%;
 }
 
-#secondary-npcs .social-box,
-#farm-status .social-box {
+#secondary-npcs .relation-box,
+#farm-status .relation-box {
 	min-width: 220px;
 	border-color: #888;
 	flex: 0 1 24.3%
 }
 
-#secondary-npcs .social-box .social-top-line
-#farm-status .social-box .social-top-line {
+#secondary-npcs .relation-box .relation-top-line
+#farm-status .relation-box .relation-top-line {
 	padding: 0.2rem 0 0.1rem;
 }
 
-#secondary-npcs .social-box .quick-stats {
+#secondary-npcs .relation-box .quick-stats {
     display: inline-flex;
 	padding-right: 0.3em;
 	align-self: flex-end;
 	z-index: 0;
 }
 
-#secondary-npcs .social-box .quick-stats .relation-stat-block:not(:first-child) {
+#secondary-npcs .relation-box .quick-stats .relation-stat-block:not(:first-child) {
     margin-left: 0.3em;
 }
 
-#secondary-npcs .social-box .relation-stat .relation-stat-icon {
+#secondary-npcs .relation-box .relation-stat .relation-stat-icon {
 	width: 20px;
 	height: 20px;
 }
 
-#secondary-npcs .social-box .relation-stat .relation-stat-percent {
+#secondary-npcs .relation-box .relation-stat .relation-stat-percent {
 	font-size: 85%;
 }
 
-#secondary-npcs .social-box .social-description,
-#farm-status .social-box .social-description,
-#global-recognition .social-box .social-description {
+#secondary-npcs .relation-box .relation-description,
+#farm-status .relation-box .relation-description,
+#global-recognition .relation-box .relation-description {
 	padding: 0.3em;
 }
 
-#faction-reputations .social-box {
+#faction-reputations .relation-box {
 	flex: 1 1 49%;
 }
 
-#global-recognition .social-box {
+#global-recognition .relation-box {
 	flex: 1 1 30%;
     min-width: 220px;
 	border-color: #666;
 }
 
-#global-recognition .social-box:last-child {
+#global-recognition .relation-box:last-child {
 	font-size: 120%;
 	flex-basis: 100%;
 }
 
-#global-recognition .social-box:not(:last-child) .social-description {
+#global-recognition .relation-box:not(:last-child) .relation-description {
 	align-self: flex-start;
 }
 
 @media(max-width: 869px) {
-	#npc-relations .social-box {
+	#npc-relations .relation-box {
 		max-width: 100%;
 	}
 
-	#secondary-npcs .social-box,
-	#farm-status .social-box {
+	#secondary-npcs .relation-box,
+	#farm-status .relation-box {
 		flex: 1 1 24.3%
 	}
 }
