Added an export warning with a quick link to the export menu
- By default shows every 15 in-game days and only disappears on exporting or clicking ignore for now
- Can be change to 5 to 25 days in the `SAVES/OPTIONS` menu
- The variable updates in both the exported save and the currently played save

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -164,6 +164,12 @@ mouse.tooltip:hover span {
 	background-color: #111;
 }
 
+#exportWarning {
+	position: fixed;
+	top: 1px;
+	font-size: 0.9em;
+}
+
 .feat {
 	/*display: none;*/
 	position: fixed;
