--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -164,6 +164,15 @@ mouse.tooltip:hover span {
 	background-color: #111;
 }
 
+#gameVersionDisplay2 {
+	position: fixed;
+	left:1px;
+	bottom: 0px;
+	font-size: 0.55em;
+	color: #777;
+	z-index: 1000;
+}
+
 #exportWarning {
 	position: fixed;
 	top: 1px;
