Added an export warning with a quick link to the export menu
- By default shows every 15 in-game days and only disappears on exporting or clicking ignore for now
- Can be change to 5 to 25 days in the `SAVES/OPTIONS` menu
- The variable updates in both the exported save and the currently played save

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -792,6 +792,171 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #8B3626;
 }
 
+/* background colours */
+.bg-red {
+	background-color: #EC3535;
+}
+
+.bg-pink {
+	background-color: #E40081;
+}
+
+.bg-light-pink {
+	background-color: #d67caf;
+}
+
+.bg-purple {
+	background-color: #AA4BC8;
+}
+
+.bg-blue {
+	background-color: #4372FF;
+}
+
+.bg-lblue,
+.bg-light-blue {
+	background-color: #559BC0;
+}
+
+.bg-teal {
+	background-color: #08C1C1;
+}
+
+.bg-green {
+	background-color: #38B20A;
+}
+
+.bg-brown {
+	background-color: #4C2217;
+}
+
+.bg-brat {
+	background-color: #B75D41;
+}
+
+.bg-meek {
+	background-color: #C44B8B;
+}
+
+.bg-def {
+	background-color: #D20000;
+}
+
+.bg-sub {
+	background-color: #AA4BC8;
+}
+
+.bg-gold {
+	background-color: #FFD700;
+}
+
+.bg-silver {
+	background-color: silver;
+}
+
+.bg-bronze {
+	background-color: #CD7F32;
+}
+
+.bg-steel {
+	background-color: #8d9496;
+}
+
+.bg-blue-steel {
+	background-color: #393747;
+}
+
+.bg-yellow,
+.bg-pale-yellow {
+	background-color: #FFD700;
+}
+
+.bg-orange {
+	background-color: #f28500;
+}
+
+.bg-tangerine,
+.bg-pale-tangerine {
+	background-color: #f28500;
+}
+
+.bg-black {
+	background-color: #000;
+}
+
+.bg-white,
+.bg-pale-white {
+	background-color: #EEE;
+}
+
+.bg-brown {
+	background-color: #aa7243;
+}
+
+.bg-softbrown {
+	background-color: #a45e16;
+}
+
+.bg-lightbrown {
+	background-color: #C5793A;
+}
+
+.bg-burntorange {
+	background-color: #d47730;
+}
+
+.bg-softblond {
+	background-color: #e4cd87;
+}
+
+.bg-platinum {
+	background-color: #FEF593;
+}
+
+.bg-ashy {
+	background-color: #d3cfaa;
+}
+
+.bg-strawberry {
+	background-color: #F08C51;
+}
+
+.bg-lewd {
+	background-color: #E04880;
+}
+
+.bg-grey {
+	background-color: #B7B7B7;
+}
+
+.bg-tan {
+	background-color: #D2B48C;
+}
+
+.bg-sand {
+	background-color: #FFDFA1;
+}
+
+.bg-olive {
+	background-color: #8E8E38;
+}
+
+.bg-navy {
+	background-color: #667DC1;
+}
+
+.bg-wine {
+	background-color: #8B3626;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.italic {
+	font-style: italic;
+}
+
 .general {
 	opacity: 0.99;
 }
