Add more price sliders and move them to own section

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -57,7 +57,8 @@ mouse.tooltip:hover span {
 
 .widerButton button {
 	max-width: 280px;
- }
+	margin-bottom: 4px;
+}
 
 .fixedClose {
 	position: -webkit-sticky;
@@ -3794,4 +3795,29 @@ label {
 	100% {
 		opacity: 1;
 	}
+}
+
+.clothes-price-container .numberslider-group {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #444;
+    border-left: none;
+    border-right: none;
+    margin-top: 4px;
+    padding: 0.5em 0;
+}
+
+.clothes-price-container .numberslider-inline {
+    display: flex;
+    flex-direction: column;
+	min-width: 50%;
+	margin-bottom: 0.5em;
+}
+
+.clothes-price-container .numberslider-inline > span {
+	font-size: 0.9em;
+}
+
+.clothes-price-container .numberslider-inline > .macro-numberslider {
+    display: flex;
 }
