Fix icon size and mannequin issues in new shop in Firefox

--- a/game/02-CSS/clothing-shop-v2.css
+++ b/game/02-CSS/clothing-shop-v2.css
@@ -177,7 +177,8 @@
 .clothing-icon img {
     image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
-    zoom: 2;
+    transform-origin: top left;
+    transform: scale(2, 2);
     height: 30px;
     width: 30px;
 }
@@ -247,6 +248,7 @@
 .clothing-gender * {
     width: inherit;
     height: inherit;
+    transform: unset;
 }
 
 .clothing-gender > span {
@@ -339,7 +341,7 @@
         height: 30px;
     }
     .clothing-item img {
-        zoom: 1;
+        transform: unset;
     }
     .clothing-item-spacer {
         height: 30px;
@@ -600,6 +602,7 @@
     height: 200px;
     margin-right: 1em;
     margin-bottom: 1em;
+    flex-shrink: 0;
 }
 .mannequin {
     overflow: hidden;
