Fix zoom on .clothing-icon.compact

--- a/game/02-CSS/clothing-shop-v2.css
+++ b/game/02-CSS/clothing-shop-v2.css
@@ -197,7 +197,7 @@
 .clothing-icon.compact img {
     width: 30px;
     height: 30px;
-    zoom: 1;
+    transform: unset;
     align-self: center;
 }
 
