Add an ability to tuck in upper clothes

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1424,6 +1424,9 @@ removed unused:
 .layer-upper {
 	z-index: 95;
 }
+.layer-upper.tucked {
+	z-index: 89
+}
 .layer-upper_top {
 	z-index: 97;
 }
