Improve warmth calculation +more
- Warmth of outfits now properly includes all pieces instead of only top piece
- Add new level of warmness for very warm clothes, now there are 5 levels: 0+, 10+, 25+, 50+ and 75+
- Add warmth indicator to wardrobe
- Improve the way mannequin is drawn, fixes outfits that have more than upper+lower pieces (e.g. froggy overcoat)

(cherry picked from commit 458548b20f78762ad53fbdae82e74ab235a14c15)

--- a/game/02-CSS/clothing-shop-v2.css
+++ b/game/02-CSS/clothing-shop-v2.css
@@ -109,6 +109,9 @@
 .warm-3 {
     background-color: #ff793b;
 }
+.warm-4 {
+    background-color: #ff481b;
+}
 
 .clothing-reveal,
 .clothing-integrity,
